# binning_rs

./: .gitignore  .npmrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: main.rs
test/: binner.test.js  cli-helper.js  custom-bins.test.js  equal-interval.test.js  head-tail.test.js  jenks.test.js  quantile.test.js  standard-deviation.test.js
