[package]
name = "binner_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.49.1", features = ["lazy", "parquet"] }
classify = "0.2.2"
ndhistogram = "0.10.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ckmeans = "0.2.0"
itertools = "0.14.0"
float-ord = "0.3.2"
